# techr

./: Cargo.toml  Makefile
.github/workflows/: polars-ci.yml  polars-release.yml
core/: Cargo.toml
core/src/: lib.rs  utils.rs
core/src/indicators/: adx.rs  adxr.rs  aroonosc.rs  bband.rs  co.rs  cv.rs  disp.rs  disparity.rs  dmi.rs  efi.rs  env.rs  eom.rs  erbear.rs  erbull.rs  ichimoku.rs  macd.rs  massi.rs  mod.rs  nvi.rs  obv.rs  ppo.rs  pvi.rs  pvo.rs  sonar.rs  stochf.rs  stochrsi.rs  stochs.rs
core/src/momentum/: aroon.rs  dmi.rs  eom.rs  macd.rs  massi.rs  nvi.rs  ppo.rs  pvi.rs  sonar.rs  stochrsi.rs  stochs.rs  ultosc.rs
core/src/overlap/: bband.rs  env.rs  ichimoku.rs  pchan.rs
core/src/volume/: efi.rs  obv.rs  pvo.rs
data/expected/: ichimoku_chikou_005930.json  ichimoku_chikou_TSLA.json  ichimoku_leading_span_b_TSLA.json  ichimoku_senkou_A_005930.json  ichimoku_senkou_A_TSLA.json  ichimoku_senkou_B_005930.json
polars/: Cargo.toml  README.md  pyproject.toml
polars/polars_techr/: __init__.py
polars/scripts/: check_artifacts.py  check_versions.py  smoke_import.py
polars/src/: expressions.rs  lib.rs
polars/tests/: test_indicators.py
