[package]
name = "techr-core"
version = "0.1.0"
edition = "2021"
description = "Rust core implementation for techr technical indicators"
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/alphaprime-dev/techr"
repository = "https://github.com/alphaprime-dev/techr"

[lib]
name = "techr"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
