[package]
name = "polars_techr"
version = "0.1.0"
edition = "2021"
description = "Polars expression plugins for techr indicators"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alphaprime-dev/techr"
repository = "https://github.com/alphaprime-dev/techr"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py310"] }
pyo3-polars = { version = "0.17.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.43.1", default-features = false }
techr-core = { path = "../core" }
